--- a/ActivityIntroduction.html
+++ b/ActivityIntroduction.html
@@ -242,15 +242,15 @@ position:absolute;
 <br><br><br>
 <p class="red" ><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; STUFF</b></p>
 <br><br>
-  <p class="v1 "><a class="f" href="file:///C:/Users/SEC/Desktop/Work/IO111/ioi111/Work_IO/Web_Development-IOI113/VALVE%20Company%20Frontpage/CompanyIntroduction.html">&nbsp;ABOUT US</a></p>
+  <p class="v1 "><a class="f" href="./CompanyIntroduction.html">&nbsp;ABOUT US</a></p>
   <br><br><br>
-  <p class="v1 "><a class="f" href="file:///C:/Users/SEC/Desktop/Work/IO111/ioi111/Work_IO/Web_Development-IOI113/VALVE%20Company%20Frontpage/ActivityIntroduction.html">&nbsp;OUR WORK</a></p>
+  <p class="v1 "><a class="f" href="./ActivityIntroduction.html">&nbsp;OUR WORK</a></p>
   <br><br><br>
-  <p class="v2 "><a class="f" href="file:///C:/Users/SEC/Desktop/Work/IO111/ioi111/Work_IO/Web_Development-IOI113/VALVE%20Company%20Frontpage/ContactLine.html">&nbsp;CONTACT US</a></p>
+  <p class="v2 "><a class="f" href="./ContactLine.html">&nbsp;CONTACT US</a></p>
   <br><br><br>
 <p class="padding2 glow-text"><a class="glow-text" href="https://store.steampowered.com/"> STEAM</a></p>
 <br><br>
-<p class="padding2 glow-text"><a class="glow-text" href="file:///C:\Users\SEC\Desktop\Work\IO111\ioi111\Work_IO\Web_Development-IOI113\VALVE Company Frontpage\Games.html"> GAMES</a></p>
+<p class="padding2 glow-text"><a class="glow-text" href="./Games.html"> GAMES</a></p>
 <br><br>
 <p class="padding2 glow-text"><a class="glow-text" href="https://partner.steamgames.com/">STEAM PARTNERS </a> </p>
 </div>
