--- a/ContactLine.html
+++ b/ContactLine.html
@@ -199,7 +199,7 @@ position:absolute;
 <aside>
 <img class="padding" src="images/Valve-Logo.png" width="248px" height="70px">
 <br><br><br>
-<h2><a class="red" href="file:///C:/Users/SEC/Desktop/Work/IO111/ioi111/Work_IO/Web_Development-IOI113/VALVE%20Company%20Frontpage/CompanyIntroduction.html">HOMEPAGE</a>
+<h2><a class="red" href="./CompanyIntroduction.html">HOMEPAGE</a>
 </h2>
 </aside>
 <article>
