--- a/Games.html
+++ b/Games.html
@@ -218,7 +218,7 @@ position:absolute;
   }
   </style>
 <aside>
-<a href="file:///C:/Users/SEC/Desktop/Work/IO111/ioi111/Work_IO/Web_Development-IOI113/VALVE%20Company%20Frontpage/CompanyIntroduction.html"><img src="images/Arrow pointing.png" width="100px" height="50px"> </a>
+<a href="./CompanyIntroduction.html"><img src="images/Arrow pointing.png" width="100px" height="50px"> </a>
 </aside>
 <article>
     <br>
