Company Introduction change to Index

--- a/ActivityIntroduction.html
+++ b/ActivityIntroduction.html
@@ -242,7 +242,7 @@ position:absolute;
 <br><br><br>
 <p class="red" ><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; STUFF</b></p>
 <br><br>
-  <p class="v1 "><a class="f" href="./CompanyIntroduction.html">&nbsp;ABOUT US</a></p>
+  <p class="v1 "><a class="f" href="./index.html">&nbsp;ABOUT US</a></p>
   <br><br><br>
   <p class="v1 "><a class="f" href="./ActivityIntroduction.html">&nbsp;OUR WORK</a></p>
   <br><br><br>
