--- a/Games.html
+++ b/Games.html
@@ -218,7 +218,7 @@ position:absolute;
   }
   </style>
 <aside>
-<a href="./CompanyIntroduction.html"><img src="images/Arrow pointing.png" width="100px" height="50px"> </a>
+<a href="./index.html"><img src="images/Arrow pointing.png" width="100px" height="50px"> </a>
 </aside>
 <article>
     <br>
