Images link added

--- a/ActivityIntroduction.html
+++ b/ActivityIntroduction.html
@@ -238,7 +238,7 @@ position:absolute;
   </style>
 </head>
 <aside>
-<img class="padding" src="images/Valve-Logo.png" width="140px" height="70px">
+<img class="padding" src="Images/Valve-Logo.png" width="140px" height="70px">
 <br><br><br>
 <p class="red" ><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; STUFF</b></p>
 <br><br>
@@ -257,8 +257,8 @@ position:absolute;
 
 </aside>
 <article>
-<img class="stupid" src="images/STEAMM.png" width="180px" height="60px" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<img class="stupid2" src="images/SteamWORKS.png" width="300px" height="80px">
+<img class="stupid" src="Images/STEAMM.png" width="180px" height="60px" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<img class="stupid2" src="Images/SteamWORKS.png" width="300px" height="80px">
 <p class="black">
 We aren't a typical company—which is why you're here, right?
 As a flat company without hierarchy and job titles, we don't usually hire for specific roles.
