--- a/ContactLine.html
+++ b/ContactLine.html
@@ -197,7 +197,7 @@ position:absolute;
   </style>
 </head>
 <aside>
-<img class="padding" src="images/Valve-Logo.png" width="248px" height="70px">
+<img class="padding" src="Images/Valve-Logo.png" width="248px" height="70px">
 <br><br><br>
 <h2><a class="red" href="./Index.html">HOMEPAGE</a>
 </h2>
