--- a/Games.html
+++ b/Games.html
@@ -218,16 +218,16 @@ position:absolute;
   }
   </style>
 <aside>
-<a href="./index.html"><img src="images/Arrow pointing.png" width="100px" height="50px"> </a>
+<a href="./index.html"><img src="Images/Arrow pointing.png" width="100px" height="50px"> </a>
 </aside>
 <article>
     <br>
-<img class="padding" src="images/catalog_hl.jpg" width="250" height="200">
-<img class="padding" src="images/catalog_hl2.jpg" width="250" height="200">
-<img class="padding" src="images/catalog_l4d.jpg" width="250" height="200">
-<img class="padding" src="images/catalog_l4d2.jpg" width="250" height="200">
-<img class="padding" src="images/catalog_p2.jpg" width="250" height="200">
-<img class="padding" src="images/catalog_portal.jpg" width="250" height="200">
+<img class="padding" src="Images/catalog_hl.jpg" width="250" height="200">
+<img class="padding" src="Images/catalog_hl2.jpg" width="250" height="200">
+<img class="padding" src="Images/catalog_l4d.jpg" width="250" height="200">
+<img class="padding" src="Images/catalog_l4d2.jpg" width="250" height="200">
+<img class="padding" src="Images/catalog_p2.jpg" width="250" height="200">
+<img class="padding" src="Images/catalog_portal.jpg" width="250" height="200">
 <br>
 <h2 class="padding2"><a class="padding2" href="https://store.steampowered.com/app/70/HalfLife/">Half-life
     <a class="padding2" href="https://store.steampowered.com/app/220/HalfLife_2/">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Half-life 2 
@@ -236,12 +236,12 @@ position:absolute;
                 <a class="padding2" href="https://store.steampowered.com/app/620/Portal_2/">Portal 2
                     <a class="padding2" href="https://store.steampowered.com/app/620/Portal_2/">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Portal
         </a></h2> <br><br> 
-<img class="padding" src="images/popular_alyx.jpg" width="250" height="200">
-<img class="padding" src="images/popular_cs2.png" width="250" height="200">
-<img class="padding" src="images/popular_dota2.jpg" width="250" height="200">
-<img class="padding" src="images/popular_tf2.jpg" width="250" height="200">
-<img class="padding" src="images/popular_underlords.jpg" width="250" height="200">
-<img class="padding" src="images/upcoming_artifact.jpg" width="250" height="200">
+<img class="padding" src="Images/popular_alyx.jpg" width="250" height="200">
+<img class="padding" src="Images/popular_cs2.png" width="250" height="200">
+<img class="padding" src="Images/popular_dota2.jpg" width="250" height="200">
+<img class="padding" src="Images/popular_tf2.jpg" width="250" height="200">
+<img class="padding" src="Images/popular_underlords.jpg" width="250" height="200">
+<img class="padding" src="Images/upcoming_artifact.jpg" width="250" height="200">
 <br>
 <h2><a class="padding3" href="https://store.steampowered.com/app/546560/HalfLife_Alyx/">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Half-life:Alyx
     <a class="padding3" href="https://store.steampowered.com/app/730/CounterStrike_2/">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Counter Strike 2
