--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ position:absolute;
   </style>
 </head>
 <aside>
-<img class="padding" src="images/Valve-Logo.png" width="140px" height="70px">
+<img class="padding" src="Images/Valve-Logo.png" width="140px" height="70px">
 <br><br><br>
 <p class="red" ><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; STUFF</b></p>
 <br><br>
@@ -233,8 +233,8 @@ position:absolute;
 
 </aside>
 <article>
-<img class="stupid" src="images/STEAMM.png" width="180px" height="60px" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<img class="stupid2" src="images/SteamWORKS.png" width="300px" height="80px">
+<img class="stupid" src="Images/STEAMM.png" width="180px" height="60px" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<img class="stupid2" src="Images/SteamWORKS.png" width="300px" height="80px">
 <p class="black">
 Valve's debut title, Half-Life, was released in 1998.
 It won <br> more than 50 game of the year awards, and PC Gamer <br> even called it the Best PC Game Ever.
