--- a/ContactLine.html
+++ b/ContactLine.html
@@ -199,7 +199,7 @@ position:absolute;
 <aside>
 <img class="padding" src="Images/Valve-Logo.png" width="248px" height="70px">
 <br><br><br>
-<h2><a class="red" href="./Index.html">HOMEPAGE</a>
+<h2><a class="red" href="./index.html">HOMEPAGE</a>
 </h2>
 </aside>
 <article>
